--- a/index.css
+++ b/index.css
@@ -15,7 +15,35 @@
 body{
 
 }
+.next{
+    display: block;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    font-size: 16px;
+    font-family: "Formula1 Display Wide";
+    background-repeat: no-repeat;
+    background-size: cover;
+    background: rgb(0,0,0);
+    background: linear-gradient(90deg, rgba(0,0,0,1) 22%, rgba(217,0,0,1) 100%, rgba(255,0,0,1) 100%);
+    border: 3px solid black;
+    padding: 10px;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
 
+}
+.ferrari{
+    background-color: rgba(255, 1, 1, 0.84);
+}
+.alpha{
+    background-color: rgb(78, 78, 78);
+}
+.williams{
+    background-color: rgb(31, 45, 249);
+}
+.mercedes{
+    background-color: rgb(0, 161, 155);
+}
 .backgr{
 
     position: fixed;
@@ -100,7 +128,7 @@ max-height: 700px;
     border-radius: 16px;
     margin-top: 40px;
     text-align: center;
-
+    margin-bottom: 40px;
 
 
 
@@ -139,7 +167,6 @@ max-height: 700px;
 }
 .table tr td{
 
-background-color: rgba(162, 5, 5, 0.306);
 
 }
 
@@ -181,6 +208,35 @@ background-color: rgba(162, 5, 5, 0.306);
     body{
     
     }
+    .next{
+        display: block;
+        text-align: center;
+        color: rgb(255, 255, 255);
+        font-size: 16px;
+        font-family: "Formula1 Display Wide";
+        background-repeat: no-repeat;
+        background-size: cover;
+        background: rgb(0,0,0);
+        background: linear-gradient(90deg, rgba(0,0,0,1) 22%, rgba(217,0,0,1) 100%, rgba(255,0,0,1) 100%);
+        border: 3px solid black;
+        padding: 10px;
+        margin: auto;
+        justify-content: center;
+        align-items: center;
+    
+    }
+    .ferrari{
+        background-color: rgba(255, 1, 1, 0.84);
+    }
+    .alpha{
+        background-color: rgb(78, 78, 78);
+    }
+    .williams{
+        background-color: rgb(31, 45, 249);
+    }
+    .mercedes{
+        background-color: rgb(0, 161, 155);
+    }
     
     .backgr{
     
@@ -191,7 +247,7 @@ background-color: rgba(162, 5, 5, 0.306);
         display: block;
         background-image: url("mon.JPG");
         background-position: 80%;
-        width: 1200px;
+        width: 100%;
         height: 100%;
         -webkit-filter: blur(5px);
         -moz-filter: blur(5px);
@@ -240,15 +296,16 @@ background-color: rgba(162, 5, 5, 0.306);
     .main-cls{
         display: flex;
         gap: 10%;
-        overflow-y: scroll;
+
         justify-content: center;
         align-items: center;
     
         
     
     }
-    
+
     .lead{
+
     
         border: 3px solid rgb(248, 38, 38);
         margin: auto;
@@ -259,7 +316,7 @@ background-color: rgba(162, 5, 5, 0.306);
         margin-top: 40px;
         text-align: center;
         justify-content: center;
-    
+        margin-bottom: 40px;
     
     
     }
@@ -289,10 +346,199 @@ background-color: rgba(162, 5, 5, 0.306);
     .table{
         font-size: 67%;
         margin: auto;
+  
     }
     .table tr td{
     
-    background-color: rgba(162, 5, 5, 0.306);
+    background-color: rgba(162, 5, 5, 0);
+    
+    }
+    
+    .icon{
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        margin-top: 20px;
+        
+    }
+    
+    .fa-instagram {  
+        background: #ffffff00;  
+        color: white;  
+        
+        
+    
+      }  
+      .circ-img{
+        margin-top: 10px;
+        width: 100%;
+
+    
+      }
+         
+
+
+ }
+
+
+ @media only screen and (min-width: 800px){
+
+    /* stili CSS da applicare quando la larghezza dello schermo supera i 900 px */
+
+    *{
+
+ 
+        color: rgb(255, 255, 255);
+        
+    
+    
+    }
+    body{
+    
+    }
+    .next{
+        display: block;
+        text-align: center;
+        color: rgb(255, 255, 255);
+        font-size: 16px;
+        font-family: "Formula1 Display Wide";
+        background-repeat: no-repeat;
+        background-size: cover;
+        background: rgb(0,0,0);
+        background: linear-gradient(90deg, rgba(0,0,0,1) 22%, rgba(217,0,0,1) 100%, rgba(255,0,0,1) 100%);
+        border: 3px solid black;
+        padding: 10px;
+        margin: auto;
+        justify-content: center;
+        align-items: center;
+    
+    }
+    .ferrari{
+        background-color: rgba(255, 1, 1, 0.84);
+    }
+    .alpha{
+        background-color: rgb(78, 78, 78);
+    }
+    .williams{
+        background-color: rgb(31, 45, 249);
+    }
+    .mercedes{
+        background-color: rgb(0, 161, 155);
+    }
+    
+    .backgr{
+    
+        position: fixed;
+        left: 0;
+        right: 0;
+        z-index: 1;
+        display: block;
+        background-image: url("mon.JPG");
+        background-position: 80%;
+        width: 100%;
+        height: 100%;
+        -webkit-filter: blur(5px);
+        -moz-filter: blur(5px);
+        -o-filter: blur(5px);
+        -ms-filter: blur(5px);
+        filter: blur(5px);
+        pointer-events: none;
+    
+    }
+    .header{
+    
+        font-family: "Formula1 Display Wide";
+        text-align: center;
+        justify-content: center;
+        padding-top: 10px;
+        width: 100%;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background: rgb(0,0,0);
+        background: linear-gradient(90deg, rgba(0,0,0,1) 22%, rgba(217,0,0,1) 100%, rgba(255,0,0,1) 100%);
+        border: 3px solid black;
+        
+    
+    }
+    .content {
+    
+        position: relative;
+      left: 0;
+      right: 0;
+      z-index: 9999;
+    
+    }
+    
+    
+    #f1l{
+    
+    max-width: 70px;
+    max-height: 700px;
+    
+    }
+    
+    #txtt{
+        font-size: 13px;
+    }
+    
+    .main-cls{
+        display: flex;
+        gap: 10%;
+
+        justify-content: center;
+        align-items: center;
+    
+        
+    
+    }
+
+    .lead{
+
+    
+        border: 3px solid rgb(248, 38, 38);
+        margin: auto;
+        width: min-content;
+        padding: 10px;
+        background: rgba(0, 0, 0, 0.685);
+        border-radius: 16px;
+        margin-top: 40px;
+        text-align: center;
+        justify-content: center;
+        margin-bottom: 40px;
+    
+    
+    }
+    .lead.right{
+        margin-right: 50%;
+    }
+    .lead.left{
+        margin-left: 50%;
+    }
+    .lead.center{
+    
+    
+    }
+    .arr{
+        box-shadow: 0px 2px 10px 0 rgba(0, 0, 0, 0.692);
+        margin: auto;
+        min-height: 250px;
+        align-items: center;
+        justify-content: center;
+        display: none;
+        
+    }
+    .clas{
+        font-size: 24px;
+        font-family: 'Yanone Kaffeesatz', sans-serif;
+    }
+    .table{
+        font-size: 67%;
+        margin: auto;
+  
+    }
+    .table tr td{
+    
+    background-color: rgba(162, 5, 5, 0);
     
     }
     
