--- a/index.css
+++ b/index.css
@@ -31,16 +31,16 @@ body{
     align-items: center;
 
 }
-.ferrari{
+.Ferrari{
     background-color: rgba(255, 1, 1, 0.84);
 }
-.alpha{
+.Alpha{
     background-color: rgb(78, 78, 78);
 }
-.williams{
+.Williams{
     background-color: rgb(31, 45, 249);
 }
-.mercedes{
+.Mercedes{
     background-color: rgb(0, 161, 155);
 }
 .backgr{
@@ -223,16 +223,16 @@ max-height: 700px;
         align-items: center;
     
     }
-    .ferrari{
+    .Ferrari{
         background-color: rgba(255, 1, 1, 0.84);
     }
-    .alpha{
+    .Alpha{
         background-color: rgb(78, 78, 78);
     }
-    .williams{
+    .Williams{
         background-color: rgb(31, 45, 249);
     }
-    .mercedes{
+    .Mercedes{
         background-color: rgb(0, 161, 155);
     }
     
@@ -408,16 +408,16 @@ max-height: 700px;
         align-items: center;
     
     }
-    .ferrari{
+    .Ferrari{
         background-color: rgba(255, 1, 1, 0.84);
     }
-    .alpha{
+    .Alpha{
         background-color: rgb(78, 78, 78);
     }
-    .williams{
+    .Williams{
         background-color: rgb(31, 45, 249);
     }
-    .mercedes{
+    .Mercedes{
         background-color: rgb(0, 161, 155);
     }
     
